--- a/IncomeStatement/Login.html
+++ b/IncomeStatement/Login.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <script type="text/javascript" src="/IncomeStatement/WebData/BundleResult/Login/IS_20190929_min_v1.js"></script>
-    <link rel="stylesheet" href="/IncomeStatement/WebData/BundleResult/Login/IS_20190929_min_v1_CSS.css" />
+    <script type="text/javascript" src="/IncomeStatement/WebData/BundleResult/Login/IS_20191020_min_v1.js"></script>
+    <link rel="stylesheet" href="/IncomeStatement/WebData/BundleResult/Login/IS_20191020_min_v1_CSS.css" />
     <!--
-    <script type="text/javascript" src="http://localhost:8080/JsFile/Internal/Login/IS_20190929_min_v1.js"></script>
-    <link rel="stylesheet" href="http://localhost:8080/JsFile/Internal/Login/IS_20190929_min_v1_CSS.css" />
+    <script type="text/javascript" src="http://localhost:8080/JsFile/Internal/Login/IS_20191020_min_v1.js"></script>
+    <link rel="stylesheet" href="http://localhost:8080/JsFile/Internal/Login/IS_20191020_min_v1_CSS.css" />
         -->
 </head>
         <body>
@@ -35,6 +35,19 @@
                       placeholder="密碼"
                       @keyup.13="login"
                     ></b-form-input>
+                    <br />
+                    <b-form-input
+                      id="input-password"
+                      v-model="userInput.validCode"
+                      required
+                      placeholder="輸入驗證碼"
+                      class="w-50 d-inline-block"
+                      @keyup.13="login"
+                    ></b-form-input>
+                    <valid-code
+                        :value.sync="sysValidCode"
+                        class="d-inline-block"
+                    ></valid-code>
                     <br />
                     <span id="errorMsg">{{loginErrorMsg}}</span>
                     <b-button variant="info" block @click="login">登入</b-button>
