--- a/IncomeStatement/Login.html
+++ b/IncomeStatement/Login.html
@@ -4,13 +4,13 @@
     <title>調查編碼系統 - 登入</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!--
-        <script type="text/javascript" src="/IncomeStatement/WebData/BundleResult/Login/IS_20191024_min_v1.js"></script>
-        <link rel="stylesheet" href="/IncomeStatement/WebData/BundleResult/Login/IS_20191024_min_v1_CSS.css" />
-        -->
-    <script type="text/javascript" src="http://localhost:8080/JsFile/Internal/Login/IS_20191024_min_v1.js"></script>
-    <link rel="stylesheet" href="http://localhost:8080/JsFile/Internal/Login/IS_20191024_min_v1_CSS.css" />
 
+    <script type="text/javascript" src="/IncomeStatement/WebData/BundleResult/Login/IS_20191027_min_v1.js"></script>
+    <link rel="stylesheet" href="/IncomeStatement/WebData/BundleResult/Login/IS_20191027_min_v1_CSS.css" />
+    <!--
+    <script type="text/javascript" src="http://localhost:8080/JsFile/Internal/Login/IS_20191027_min_v1.js"></script>
+    <link rel="stylesheet" href="http://localhost:8080/JsFile/Internal/Login/IS_20191027_min_v1.css" />
+        -->
 </head>
         <body>
             <div id="vue_instance">
@@ -43,6 +43,7 @@
                       placeholder="輸入驗證碼"
                       class="w-50 d-inline-block"
                       @keyup.13="login"
+                      style='float:left; margin-bottom: 30px;'
                     ></b-form-input>
                     <valid-code
                         :value.sync="sysValidCode"
